<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="197dp"
            android:layout_height="105dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/AppIcon"
            android:src="@drawable/appicon" />

        <!-- Email Label -->
        <TextView
            android:id="@+id/txtDatosRegistro"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/DatosRegistro" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Contraseña"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_rePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/RepetirContraseña"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSiguiente"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:onClick="nextActivity"
            android:padding="12dp"
            android:text="@string/Siguiente" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnRound1"
                style="@android:style/Widget.DeviceDefault.Button.Small"
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:background="@drawable/greenbutton"
                android:padding="15dp" />

            <Button
                android:id="@+id/btnRound2"
                style="@android:style/Widget.Button.Small"
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:background="@drawable/greybutton"
                android:padding="15dp" />

            <Button
                android:id="@+id/btnRound3"
                style="@android:style/Widget.Button.Small"
                android:layout_width="25dp"
                android:layout_height="22dp"
                android:background="@drawable/greybutton"
                android:padding="15dp" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>